--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,147 @@ body {
     line-height: 1.1;
 }
 
+
+html {
+    scroll-behavior: smooth;
+  }
+  
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  body {
+    background: url('../img/background3.gif') no-repeat center center fixed;
+    /*ИЗМЕНИЛ БЭКГРАУНД КОЛОР НА ЧЕРНЫЙ*/
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    height: 100vh;
+    width: 100%;
+    color: whitesmoke;
+    margin: 0;
+    font-family: Montserrat;
+    line-height: 1.1;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: -500px;
+    width: 500px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.116);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    color: #fff;
+    transition: right 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    font-family: Montserrat;
+  }
+  
+  .sidebar.open {
+    right: 0;
+  }
+  
+  .sidebar-content {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    padding: 20px 20px;
+    padding-top: 90px;
+    width: calc(100% - 40px);
+    height: 100%
+  }
+  
+  
+  .content {
+    display: block;
+    margin: 10px 0;
+    padding: 10px;
+    text-align: center;
+    transition: background 0.3s ease;
+  }
+  
+  .contact {
+    font-size: 45px;
+  }
+  
+  .sidebar-content a:hover {
+    background: #666;
+  }
+  
+  .sidebar-footer {
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+  }
+  
+  .toggle-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    z-index: 1100;
+    transition: background 0.3s ease;
+  }
+  
+  .toggle-btn:hover {
+    background-color: #555;
+  }
+  
+  ::placeholder {
+    text-align: left;
+    color: white;
+  }
+  
+  input {
+    background-color: rgba(0, 0, 0, 0.24);
+    border: none;
+    border-bottom: 1px solid rgb(136, 136, 136);
+    border-radius: 5px;
+    color: white;
+    padding: 5px 0;
+    margin-bottom: 10px;
+  }
+  
+  .checkbox {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+  }
+  
+  #agree {
+    font-size: 12px;
+  }
+
+
+
+
+
 ::selection {
     background: rgb(0, 255, 242);
     color: black;
@@ -130,6 +271,11 @@ nav {
     background-color: rgb(0, 255, 242);
     color: black;
     transition: all 0.3s ease;
+}
+
+#contact-button.open {
+    transform: rotate(45deg);
+    transition: transform 0.3s ease;
 }
 
 #email::after, #phone::after, #uslugi-button::after, #projekty-button::after {
